<resources>
    <string name="app_name">GoogleSDK</string>
    <string name="server_client_id">1043987211091-pprb2vs6pa01udeea73g1dq3lkuoh158.apps.googleusercontent.com</string>
    <string name="facebook_app_id">613472698825828</string>


    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="text">*-@._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="fast_register">一键注册</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="bangding">马上绑定</string>


    <string name="edittext">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="net_unsupport">网络连接异常</string>
    <string name="use_cannot_empty">账号不能为空</string>
    <string name="pwd_cannot_empty">密码不能为空</string>
    <string name="username_min_6">请输入至少6位账号</string>
    <string name="password_min_6">请输入至少6位密码</string>
    <string name="two_pwd_must_equal">两次密码必须相同</string>
    <string name="show_pwd">用户协议</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="cancle">取消</string>
    <string name="find_pwd">找回密码</string>
    <!--支付宝  -->
    <string name="confirm_title">提示</string>
    <string name="ensure">确定</string>

    <string name="content_description_icon">icon</string>
    <string name="refresh">刷新</string>
    <string name="processing">加载中</string>
    <string name="download">下载</string>
    <string name="download_fail">下载安装包失败</string>
    <string name="cancel_install_msp">你已取消安装移动快捷支付服务。</string>
    <string name="cancel_install_alipay">你已取消安装支付宝钱包。</string>
    <string name="redo">重试</string>
    <!--支付宝  -->
</resources>
