<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="60dp" >

            <LinearLayout
                android:id="@+id/ll_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/arrow_left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/login"
                    android:textColor="@color/textgreen"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/close_x" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.yilegame.yile.wight.AccountEditText
                android:id="@+id/att_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp"
                app:ispwd="false"
                app:hasarrow="false"
                app:summary="账号" >
            </com.yilegame.yile.wight.AccountEditText>

            <com.yilegame.yile.wight.AccountEditText
                android:id="@+id/att_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/att_user"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp"
                app:ispwd="true"
                app:hasarrow="false"
                app:summary="密码" >
            </com.yilegame.yile.wight.AccountEditText>
<com.yilegame.yile.wight.AccountEditText
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/att_pwd"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp"
                app:ispwd="false"
                app:hasarrow="false"
                app:summary="手机号" >
            </com.yilegame.yile.wight.AccountEditText>
             <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
      
                android:orientation="horizontal"
                android:layout_alignRight="@+id/phone"
                android:layout_alignLeft="@+id/phone"
                android:layout_below="@+id/phone"
                android:layout_marginBottom="12dp" 
                android:id="@+id/signli">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/kuangleft"
                    android:gravity="center"
                    android:text="验证码"
                    android:textColor="@color/textgreen"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/kuangright"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp" >

                    <EditText
                        android:id="@+id/sign"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:inputType="number"
                        android:maxLength="16"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/getCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/button_selector_green"
                    android:gravity="center"
                    android:text="获取验证码"
                    android:textColor="@color/TextColorWhite" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_btn_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/att_pwd"
                android:layout_alignRight="@id/att_pwd"
                android:layout_below="@id/signli"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/cancle"
                    style="@style/btn_style2"
                    android:background="@drawable/login_bg_white"
                    android:gravity="center"
                    android:text="@string/cancle"
                    android:textColor="@color/textgreen"
                    android:textSize="@dimen/btn_textsize" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/register"
                    style="@style/btn_style2"
                    android:background="@drawable/login_bg_green"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btn_textsize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/att_pwd"
                android:layout_alignRight="@id/att_pwd"
                android:layout_below="@id/ll_btn_item"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="15dp" >

                <CheckBox
                    android:id="@+id/isshow_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/qy_showpwd_checkbox"
                    android:paddingLeft="3dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_pwd"
                    android:textColor="@color/textgreen"
                    android:textSize="15sp"
                    android:clickable="true"
                    android:id="@+id/agreement"  />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_pwd"
                    android:textColor="@color/textgreen"
                    android:textSize="15sp"
                    android:visibility="invisible" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
</ScrollView>